--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:background="@drawable/signupforclassify">
+    android:background="@drawable/loginbgnew">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,51 +16,14 @@
         android:orientation="horizontal"
         tools:ignore="UselessParent">
 
-        <ImageView
-            android:id="@+id/login_icon"
-            android:layout_width="128dp"
-            android:layout_height="128dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginVertical="22dp"
-            android:src="@drawable/login"
-            tools:ignore="ContentDescription,ImageContrastCheck" />
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/hello_text"
-            android:layout_below="@+id/login_icon"
-
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Hello"
-                android:textColor="@color/black"
-                android:textSize="32sp"
-                android:fontFamily="@font/app"
-
-                tools:ignore="HardcodedText" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Welcome Back"
-                android:fontFamily="@font/app"
-                android:textColor="@color/black"
-                android:textSize="32sp"
-
-                tools:ignore="HardcodedText" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/hello_text"
             android:id="@+id/form_layout"
-            android:layout_marginVertical="32dp"
+            android:layout_marginTop="300dp"
             android:orientation="vertical">
 
             <EditText
@@ -144,12 +107,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Don't have an account ? "
+                    android:layout_marginEnd="5dp"
                     tools:ignore="HardcodedText" />
 
-                <TextView
+                <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
+                    app:cornerRadius="20dp"
+                    android:textSize="12sp"
                     android:id="@+id/create_account_text_view_btn"
                     android:text="Create Account"
                     tools:ignore="HardcodedText" />
