--- a/app/src/main/res/drawable/themeone.xml
+++ b/app/src/main/res/drawable/themeone.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="10dp" />
+    <corners android:radius="50dp" />
 
     <gradient
-        android:startColor="#FFA500"
-        android:endColor="#FF8C00"
+        android:startColor="#C25A70E7"
+        android:endColor="#979DCB"
         android:type="linear"
         android:angle="45" />
 
