--- a/app/src/main/res/layout/rc_items.xml
+++ b/app/src/main/res/layout/rc_items.xml
@@ -5,29 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="30dp"
-    app:cardCornerRadius="40dp"
+    app:cardCornerRadius="26dp"
 
-    android:layout_marginHorizontal="14dp"
-    android:layout_marginVertical="15dp"
-    app:cardBackgroundColor="@color/my_primary">
+    android:layout_marginVertical="20dp">
 
 
     <RelativeLayout
         android:id="@+id/rcrelativelayout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@drawable/navheader"
-        android:padding="8dp"
+        android:background="@drawable/themeone"
         tools:ignore="TextSizeCheck">
 
         <TextView
             android:id="@+id/timerc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="Time"
+            android:textColor="@color/black"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="34dp"
             android:fontFamily="@font/app"
+            android:text="Time"
             android:textSize="16sp"
             tools:ignore="HardcodedText,TextSizeCheck" />
 
@@ -36,35 +34,36 @@
             android:id="@+id/classnamerc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="12dp"
-            android:text="Class Name"
-            android:textSize="20sp"
             android:fontFamily="@font/app"
+            android:text="Class Name"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/teachernamerc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="52dp"
-            android:text="@string/teacher_name"
-            android:textSize="16sp"
-
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="62dp"
             android:fontFamily="@font/app"
+            android:text="@string/teacher_name"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             tools:ignore="TextContrastCheck" />
 
         <TextView
             android:id="@+id/roomnorc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="250dp"
+            android:layout_marginStart="280dp"
             android:layout_marginTop="32dp"
-            android:text="@string/room_no"
-            android:textSize="18sp"
             android:fontFamily="@font/app"
-            />
+            android:text="@string/room_no"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
 
     </RelativeLayout>
