--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,10 +4,14 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
 
-
-    <color name="lavender">#C4DFDF</color>
-    <color name="white">#FFFFFF</color>
-    <color name="my_primary">#BDBDBD</color>
+    <color name="my_primary">#9CB1F0</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="lavender">#8692f7</color>
+    <color name="grey">#aaa</color>
+    <color name="darkGrey">#ff424242</color>
     <color name="colorDivider">#808080</color>
     <color name="colorCardBackground">#424242</color>
 
