--- a/app/src/main/res/drawable/tab_indicator.xml
+++ b/app/src/main/res/drawable/tab_indicator.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Lavender color for the left half -->
-    <item android:left="0dp" android:right="50dp" android:top="0dp" android:bottom="0dp">
+
+    <!-- Outer shape with rounded corners -->
+    <item
+        android:left="10dp"
+        android:right="10dp">
         <shape android:shape="rectangle">
+            <corners
+                android:bottomLeftRadius="30dp"
+                android:bottomRightRadius="30dp"/>
             <solid android:color="@color/lavender" />
-            <corners android:topLeftRadius="30dp" android:bottomLeftRadius="30dp"/>
         </shape>
     </item>
-    <!-- White color for the right half -->
-    <item android:left="250dp" android:right="0dp" android:top="0dp" android:bottom="0dp">
+
+    <!-- Inner shape with padding -->
+    <item
+        android:bottom="20dp"
+        android:left="20dp"
+        android:right="20dp"
+        android:top="20dp">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <corners  android:topLeftRadius="30dp" android:bottomLeftRadius="30dp" />
+            <corners
+                android:bottomLeftRadius="30dp"
+                android:bottomRightRadius="30dp" />
+
         </shape>
     </item>
+
 </layer-list>
