--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,28 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     tools:context=".HomeFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        app:tabIndicatorHeight="0dp"
         android:fontFamily="@font/app"
-        app:tabMinWidth="80dp"
+        app:tabGravity="center"
+        app:tabIndicator="@drawable/tab_indicator"
         app:tabIndicatorGravity="stretch"
+        app:tabRippleColor="@null"
         app:tabMode="scrollable"
-        app:tabPaddingEnd="8dp"
-        app:tabPaddingStart="8dp"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <!--        we will add the tabindictor later-->
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fontFamily="@font/app"
         tools:ignore="SpeakableTextPresentCheck" />
-
-
 </LinearLayout>
