--- a/app/src/main/res/drawable/time_card.xml
+++ b/app/src/main/res/drawable/time_card.xml
@@ -3,11 +3,7 @@
     android:shape="rectangle">
     <corners android:radius="10dp" />
 
-    <gradient
-        android:startColor="#C25A70E7"
-        android:endColor="#979DCB"
-        android:type="linear"
-        android:angle="45" />
+    <solid android:color="@color/lavender"/>
 
     <stroke
         android:width="2dp"
