--- a/app/src/main/res/layout/rc_items.xml
+++ b/app/src/main/res/layout/rc_items.xml
@@ -1,72 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="26dp"
-
-    android:layout_marginVertical="20dp">
+    android:layout_marginVertical="20dp"
+    app:cardCornerRadius="15dp">
 
 
-    <RelativeLayout
+    <!--    android:background="@drawable/themeone"-->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rcrelativelayout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@drawable/themeone"
         tools:ignore="TextSizeCheck">
 
-        <TextView
-            android:id="@+id/timerc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="34dp"
-            android:fontFamily="@font/app"
-            android:text="Time"
-            android:textSize="16sp"
-            tools:ignore="HardcodedText,TextSizeCheck" />
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/time_card"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
+            <TextView
+                android:id="@+id/timerc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/app"
+                android:text="Time"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                tools:ignore="HardcodedText,TextSizeCheck" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/classnamerc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="12dp"
             android:fontFamily="@font/app"
             android:text="Class Name"
             android:textColor="@color/black"
             android:textSize="20sp"
-            tools:ignore="HardcodedText" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/roomnorc"
+            app:layout_constraintHorizontal_bias="0.461"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.2"
+            tools:ignore="HardcodedText,MissingConstraints" />
 
         <TextView
             android:id="@+id/teachernamerc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="62dp"
+            android:layout_width="118dp"
+            android:layout_height="19dp"
+            android:layout_marginTop="38dp"
             android:fontFamily="@font/app"
             android:text="@string/teacher_name"
             android:textColor="@color/black"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/roomnorc"
+            app:layout_constraintHorizontal_bias="0.57"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/classnamerc"
+            app:layout_constraintVertical_bias="1.0"
             tools:ignore="TextContrastCheck" />
 
         <TextView
             android:id="@+id/roomnorc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="280dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             android:fontFamily="@font/app"
             android:text="@string/room_no"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.52" />
 
-
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.cardview.widget.CardView>
